Fix .cart-widjet__data alignment

--- a/src/styles/partials/cart.styl
+++ b/src/styles/partials/cart.styl
@@ -122,8 +122,6 @@
   width: $size;
   height: $size;
 
-  padding: 1px;
-
   font-family: sans-serif;
   font-size: .75rem;
   text-align: center;
